# Cinder-GstVideoSyncPlayer

./: README.md  cinderblock.xml  licence.md
proj/cmake/: GstVideoSyncedPlayerConfig.cmake
samples/simpleClientPlayer/proj/cmake/: CMakeLists.txt
samples/simpleClientPlayer/src/: SimpleClientPlayer.cpp
samples/simpleServerPlayer/proj/cmake/: CMakeLists.txt
samples/simpleServerPlayer/src/: SimpleServerPlayer.cpp
samples/simpleSyncedPlayer/proj/cmake/: CMakeLists.txt
samples/simpleSyncedPlayer/src/: SimpleSyncedPlayer.cpp
src/: GstVideoClient.cpp  GstVideoClient.h  GstVideoServer.cpp  GstVideoServer.h  GstVideoSyncPlayer.cpp  GstVideoSyncPlayer.h
